cmss/integrations/objects/AQAccountRelation__e/AQAccountRelation__e.object-meta.xml
<CustomObject>
    <label>AQAccountRelation</label>
    <pluralLabel>AQAccountRelation</pluralLabel>
</CustomObject>