cmss/integrations/objects/AQAccountRelation__e/fields/ChangedFields__c.field-meta.xml
<CustomField>
    <fullName>ChangedFields__c</fullName>
    <label>ChangedFields</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>