cmss/integrations/objects/AQAccountRelation__e/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <label>External Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>