cmss/integrations/objects/AQAccountRelation__e/fields/NewValues__c.field-meta.xml
<CustomField>
    <fullName>NewValues__c</fullName>
    <label>NewValues</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>